Fixed errors of account functions
